--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-08-28  Brian Nickel  <brian.nickel@gmail.com>
+
+	* src/TagLib/Asf/Tag.cs: Fixes a segmentation fault that can arise from
+	TagLib.Asf.Tag.DiscCount when WM/PartOfSet doesn't contain a '/'.
+
 2006-08-27  Aaron Bockover  <abockover@novell.com>
 
 	* src/TagLib/ReadOnlyException.cs: New exception
