2006-09-01  Aaron Bockover  <abockover@novell.com>
    * examples/covers/: Added sample cover art files


svn path=/trunk/taglib-sharp/; revision=64751

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-09-01  Aaron Bockover  <abockover@novell.com>
 
+	* examples/covers/: Added sample cover art files
+
+2006-09-01  Aaron Bockover  <abockover@novell.com>
+
 	* tests/: Added test sample audio files
 
 2006-09-01  Aaron Bockover  <abockover@novell.com>
