--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-09-11  Brian Nickel  <brian.nickel@gmail.com>
+
+	* src/TagLib/Mpeg4/File.cs: Added "audio/mp4" to types.
+
 2006-09-01  Aaron Bockover  <abockover@novell.com>
 
 	* examples/covers/: Added sample cover art files
