2006-10-08  Aaron Bockover  <abock@gnome.org>
    * src/TagLib/SupportedMimeType.cs: Added AllMimeTypes static enumerator


svn path=/trunk/taglib-sharp/; revision=66411

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-08  Aaron Bockover  <abock@gnome.org>
+
+	* src/TagLib/SupportedMimeType.cs: Added AllMimeTypes static enumerator
+
 2006-09-25  Brian Nickel  <brian.nickel@gmail.com>
 
 	* src/TagLib/CombinedTag.cs: Fixed a bug in CombinedTag.get_Pictures
