--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-10-08  Aaron Bockover  <abock@gnome.org>
 
+	* src/TagLib/SupportedMimeType.cs: Added extension support
+
+2006-10-08  Aaron Bockover  <abock@gnome.org>
+
 	* src/TagLib/SupportedMimeType.cs: Added AllMimeTypes static enumerator
 
 2006-09-25  Brian Nickel  <brian.nickel@gmail.com>
