--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-11-03  Brian Nickel  <brian.nickel@gmail.com>
+
+	* src/TagLib/ByteVector.cs: Use Boyer-Moore String Searching Algorithm 
+	to speed things up a little. (Very little.)
+
 2006-10-30  Aaron Bockover  <abock@gnome.org>
 
 	* src/TagLib/IntList.cs:
